# KitX-Installer

./: .gitignore  KitX Installer.code-workspace  README.md
.github/workflows/: mirror.yml
CrossPlatform Installers/KitX_Installer_Egui/: Cargo.toml
CrossPlatform Installers/KitX_Installer_Egui/src/: main.rs
Installer for Linux/: install-kitx.sh
Installer for Windows/KitX Installer for Windows in .NET Framework/: AskLanguage.Designer.cs  AskLanguage.cs  AskLanguage.resx  KitX Installer for Windows in .NET Framework.csproj  MainForm.Designer.cs  MainForm.cs  MainFormLanguages.cs  Program.cs  UninstallForm.Designer.cs  UninstallForm.cs  app.config
Installer for Windows/KitX Installer for Windows in .NET Framework/Properties/: AssemblyInfo.cs  Settings.Designer.cs  app.manifest
Installer for Windows/KitX Installer for Windows in aardio/: default.aproj
Installer for Windows/KitX Installer for Windows in aardio/KitX Installer for Windows in aardio/: main.aardio
Installer for Windows/KitX Installer for Windows in aardio/dlg/: languageSelectDialog.aardio
KitX_Installer_Egui/: Cargo.toml  build.rs  release.ps1  third_party.md
KitX_Installer_Egui/.cargo/: config.toml
KitX_Installer_Egui/assets/: .gitignore
KitX_Installer_Egui/assets/7z/: README.md  fetch.ps1
KitX_Installer_Egui/src/: app_info.rs  application.rs  main.rs
KitX_Installer_Egui/src/data/: data_fetcher.rs  data_validator.rs  debug_config.rs  download_config.rs  install_config.rs  mod.rs  profile_helper.rs
KitX_Installer_Egui/src/data/models/: host.rs  mod.rs
KitX_Installer_Egui/src/utils/: arguments_processor.rs  assets_manager.rs  mod.rs  zip_file_manager.rs
KitX_Installer_Egui/src/views/: application.rs  font_helper.rs  mod.rs  translations.rs
KitX_Installer_Egui_Patcher/: Cargo.toml  README.md  patch.ps1  patch.sh
KitX_Installer_Egui_Patcher/src/: app_info.rs  main.rs  patch_info.rs  patch_task.rs
