[package]
name = "kitx_installer_egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.22.0"
env_logger = "0.10.0"
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
tokio = { version = "1.28.2", features = ["full"] }
regex = "1.8.4"

[build-dependencies]
static_vcruntime = "2.0"
